[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/scripts/interface/inventory/ItemIcon.gd" type="Script" id=1]

[node name="ItemIcon" type="ColorRect"]
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
script = ExtResource( 1 )

[node name="border-left" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_right = 2.0
color = Color( 0.5, 0.5, 0.5, 1 )

[node name="border-right" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
color = Color( 0.521569, 0.521569, 0.521569, 1 )

[node name="border-up" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 2.0
color = Color( 0.521569, 0.521569, 0.521569, 1 )

[node name="border-down" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
color = Color( 0.521569, 0.521569, 0.521569, 1 )

[node name="icon" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
expand = true
stretch_mode = 6

[connection signal="gui_input" from="." to="." method="_on_ItemIcon_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_ItemIcon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemIcon_mouse_exited"]
